# ai-protect

./: .bearer-skip  .dockerignore  .gitignore  .njsscan  .semgrep-exclude  Dockerfile  LICENSE  README.md  RELEASING.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ai-protect.yml  assure.yml  docker.yml  pilot-assure.yml  release.yml
ai_protect/: README.md  __init__.py  cli.py  requirements.txt
ai_protect/adapters/: base.py  bearer.py  caldera.py  codeql.py  dependency_check.py  eval_suite.py  garak.py  grype.py  guardrails.py  hadolint.py  intel_match.py  modelscan.py  njsscan.py  osv_scanner.py  presidio.py  pyrit.py  ride.py  semgrep.py  telemetry_drift.py  trivy.py  trufflehog.py  wpscan.py  zap.py
ai_protect/core/: adhoc.py  auto_resolve.py  dashboard.py  doctor.py  firstrun.py  intel_enrichment.py  manifest.py  policy.py  scan_modes.py  settings.py  tiering.py
ai_protect/fixtures/: clinical_assistant_guardrails.yml  clinical_assistant_threat_model.yml
ai_protect/integrations/: __init__.py  base.py  registry.py
ai_protect/intel/: __init__.py  feeds.py  fetcher.py  translators.py
ai_protect/manifests/: SAMPLE-clinical-assistant-prototype.yml  SAMPLE-dev-code-summarizer.yml  ai-protect.yml
ai_protect/remediate/: base.py  dismissal.py  engine.py  registry.py  scan_runner.py  scans.py  state.py
ai_protect/reporting/: executive.py  technical.py
docs/: exec_brief_v1.docx  one_pager_v1.docx  operating_model_v2_1.docx  pipeline_companion_v1.docx  tools_catalogue.csv
pilot/: insecure_demo.py  manifest.yml
pipeline/: README.md  __init__.py  cli.py  requirements.txt
(+173 files in other folders)
