[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-protect"
dynamic = ["version"]
description = "AI-application security assurance pipeline: tier-aware SAST/DAST/AI-red-team scanning with a findings dashboard."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ai-protect maintainers" }]
keywords = ["security", "appsec", "sast", "dast", "ai", "llm", "red-team", "vulnerability-scanner"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Framework :: Flask",
    "Operating System :: OS Independent",
]
# Core runtime deps only. Heavy/optional scanners (garak, pyrit, nuclei,
# trufflehog, the DAST tools) are installed separately and discovered at
# runtime — see `ai-protect doctor`.
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.33.0",
    "defusedxml>=0.7.1",
    "Flask>=3.1.3",
    "reportlab==4.5.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[project.scripts]
ai-protect = "ai_protect.cli:main"
ai-protect-ui = "ai_protect.ui.server:main"

[project.urls]
Homepage = "https://github.com/n08976/ai-protect"
Repository = "https://github.com/n08976/ai-protect"

[tool.setuptools.dynamic]
version = { attr = "ai_protect.__version__" }

[tool.setuptools.packages.find]
include = ["ai_protect*"]
exclude = ["ai_protect.tests*"]

[tool.setuptools.package-data]
"ai_protect" = ["manifests/*.yml"]
"ai_protect.ui" = ["templates/*", "static/*"]
